--- a/notebooks/4_Training_Evaluation_V_2.ipynb
+++ b/notebooks/4_Training_Evaluation_V_2.ipynb
@@ -462,10 +462,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "7bd54aab",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best SVM Params: {'C': 1, 'gamma': 'scale', 'kernel': 'rbf'}\n",
+      "\n",
+      "--- SVM Report ---\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "    negative       0.92      0.85      0.88      1818\n",
+      "     neutral       0.62      0.72      0.67       613\n",
+      "    positive       0.72      0.78      0.75       460\n",
+      "\n",
+      "    accuracy                           0.81      2891\n",
+      "   macro avg       0.75      0.78      0.77      2891\n",
+      "weighted avg       0.82      0.81      0.82      2891\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# 1. Define Grid (Kept small for speed)\n",
     "param_grid_svm = {\n",
